# django-mongoengine

./: .flake8  .gitignore  .travis.yml  .versionrc.json  AUTHORS  CHANGELOG.md  CHANGELOG.rst  MANIFEST.in  Makefile  OSSMETADATA  README.md  README.rst  VERSION  codegen.py  pyproject.toml  pyrightconfig.json  pytest.ini  requirements.txt  requirements_26.txt  requirements_dev.txt  requirements_example.txt  setup.cfg  setup.py
.github/workflows/: release.yml  test.yml
django_mongoengine/: __init__.py  apps.py  document.py  document.pyi  fields.py  paginator.py  queryset.py  sessions.py  tests.py
django_mongoengine/admin/: __init__.py  actions.py  helpers.py  options.py  sites.py  util.py  validation.py  views.py
django_mongoengine/admin/management/commands/: createmongodbsuperuser.py
django_mongoengine/admin/static/: dict.js  helper.js
django_mongoengine/admin/templatetags/: documenttags.py  mongoadmintags.py
django_mongoengine/auth/: admin.py  models.py
django_mongoengine/contrib/: drf_spectacular.py
django_mongoengine/debug_toolbar/: operation_tracker.py  panel.py
django_mongoengine/debug_toolbar/templates/: _stats.html  mongodb-panel.html
django_mongoengine/debug_toolbar/templatetags/: mongodb_debug_tags.py
django_mongoengine/fields/: __init__.py  djangoflavor.py  drf_patches.py  internal.py
django_mongoengine/forms/: __init__.py  document_options.py  documents.py  field_generator.py  fields.py  utils.py  widgets.py
django_mongoengine/mongo_admin/: __init__.py  actions.py  apps.py  decorators.py  helpers.py  options.py  sites.py  util.py  validation.py  views.py
django_mongoengine/mongo_admin/management/commands/: createmongodbsuperuser.py
django_mongoengine/mongo_admin/static/: dict.js
django_mongoengine/mongo_admin/templates/admin/: change_document_list.html
django_mongoengine/mongo_admin/templates/mongo_admin/: index.html
django_mongoengine/mongo_admin/templatetags/: documenttags.py  mongoadmintags.py
django_mongoengine/mongo_auth/: __init__.py  admin.py  backends.py  managers.py  models.py
django_mongoengine/utils/: __init__.py  backports.py  isinstance.py  module.py  monkey.py  patches.py  wrappers.py
django_mongoengine/views/: __init__.py  detail.py  edit.py  embedded.py  list.py  utils.py
django_mongoengine/views/templates/: _forms.html
docs/: changelog.rst  conf.py  examples.rst  index.rst
example/tumblelog/: Pipfile  manage.py  requirements.txt  views.py
example/tumblelog/tumblelog/: admin.py  forms.py  models.py  settings.py  urls.py  views.py  wsgi.py
example/tumblelog/tumblelog/templates/: _delete.html  _details.html  _forms.html  _messages.html  base.html
example/tumblelog/tumblelog/templates/tumblelog/: post_detail.html  post_form.html  post_list.html
sg-rules/: 0.6.0-rewrite-blank.yml
tests/: __init__.py  settings.py  test_document_options.py  test_models.py
tests/forms/: models.py  test.py  tests.py
tests/test_utils/: test_monkey.py
tests/views/: __init__.py  base.py  dates.py  detail.py  edit.py  forms.py  list.py  models.py  tests.py  urls.py  views.py
tests/views/templates/views/: about.html
