[tool.poetry]
name = "django-mongoengine"
version = "0.4.6"
description = "Django support for MongoDB via MongoEngine"
authors = ["Ross Lawley <ross.lawley@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8"
django = ">=3.2,<5"
mongoengine = ">=0.14"
typing-extensions = "^4.8.0"

[tool.poetry.group.dev.dependencies]
flake8 = "*"
pdbpp = "*"
pytest = "*"
pytest-cov = "*"
pytest-django = "*"
pytest-sugar = "*"
ruff = "^0.1.3"
sphinx = "*"
black = "^23.10.1"

[tool.black]
line-length = 100
skip-string-normalization = true

[tool.ruff]
line-length = 100
select = [
    "E",
    "F",
    "FA",
    "T20",
    "TCH",
    "C4",
]
ignore = ["E501"]
