[tool.poetry]
name = "django-mongoengine"
version = "0.4.6"
description = "Django support for MongoDB via MongoEngine"
authors = ["Ross Lawley <ross.lawley@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
django = ">=4.2,<5"
mongoengine = ">=0.14"

[tool.poetry.group.dev.dependencies]
flake8 = "*"
pdbpp = "*"
pytest = "*"
pytest-cov = "*"
pytest-django = "*"
pytest-sugar = "*"
ruff = "^0.1.3"
sphinx = "*"
typing-extensions = "^4.8.0"
mongo-types = { git = "https://github.com/sbdchd/mongo-types.git", branch = "main" }
django-types = "^0.19.1"

[tool.ruff]
line-length = 100
select = [
    "E",
    "F",
    "FA",
    "T20",
    "TCH",
    "C4",
]
ignore = ["E501"]
[tool.ruff.pyflakes]
extend-generics = [
    "mongoengine.queryset.QuerySetManager",
    "mongoengine.queryset.QuerySet",
    "mongoengine.queryset.QuerySetNoCache",
    "django_mongoengine.queryset.QuerySetManager",
    "django_mongoengine.queryset.QuerySet",
    "django_mongoengine.queryset.QuerySetNoCache",
]
[tool.ruff.format]
# Use `\n` line endings for all files
line-ending = "lf"
