[project]
name = "django-mongoengine"
description = "Django support for MongoDB via MongoEngine"
readme = {file = "README.rst", content-type = "text/x-rst"}
authors = [
    {name = "Ross Lawley", email = "ross.lawley@gmail.com"},
]
dynamic = ["version"]
license = {text = "BSD"}
requires-python = "<4.0,>=3.9"

classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Framework :: Django"
]
dependencies = [
    "django<5,>=4.2",
    "mongoengine>=0.14",
]

[project.urls]
"Homepage" = "https://github.com/mongoengine/django-mongoengine"
"Download" = "https://github.com/mongoengine/django-mongoengine/tarball/master"

[dependency-groups]
dev = [
    "flake8",
    "pdbpp",
    "pytest",
    "pytest-cov",
    "pytest-django",
    "pytest-sugar",
    "ruff",
    "sphinx",
    "typing-extensions",
    "mongo-types @ git+https://github.com/sbdchd/mongo-types.git@main",
    "django-types",
    "build>=1.2.2.post1",
]

[tool.ruff]
line-length = 100
[tool.ruff.lint]
select = [
    "E",
    "F",
    "FA",
    "T20",
    "TCH",
    "C4",
]
ignore = ["E501"]
[tool.ruff.lint.pyflakes]
extend-generics = [
    "mongoengine.queryset.QuerySetManager",
    "mongoengine.queryset.QuerySet",
    "mongoengine.queryset.QuerySetNoCache",
    "django_mongoengine.queryset.QuerySetManager",
    "django_mongoengine.queryset.QuerySet",
    "django_mongoengine.queryset.QuerySetNoCache",
]
[tool.ruff.format]
# Use `\n` line endings for all files
line-ending = "lf"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["django_mongoengine/**"]

[tool.hatch.build.targets.wheel]
packages = ["django-mongoengine"]

[tool.hatch.version]
source = "vcs"
