[metadata]
name = django-mongoengine
description = Django support for MongoDB via MongoEngine
long_description = file:README.rst
long_description_content_type = text/x-rst
license = BSD
author = Ross Lawley
email_email = ross.lawley@gmail.com
version = file:VERSION
url = https://github.com/mongoengine/django-mongoengine
download_url = https://github.com/mongoengine/django-mongoengine/tarball/master
classifiers =
    Development Status :: 4 - Beta
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Software Development :: Libraries :: Python Modules
    Framework :: Django

[options]
zip_safe = False
install_requires =
    Django>3.1,<4.1
    mongoengine>=0.14
include_package_data = True
packages = find:

[options.packages.find]
exclude =
    doc
    docs
    tests
    example
